#BestCodeEver multiple sign in page

--- a/Web/authentication.css
+++ b/Web/authentication.css
@@ -115,6 +115,14 @@ input[type="submit"] {
   width: 270px;
 }
 
+
+
+
+input[type="submit"]:active {
+  top:3px;
+  box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #31524d, 0px 5px 3px #999;
+}
+
 .fbbtn {
   background: #3D5A97;
   background-image: -webkit-linear-gradient(top, #3D5A97, #3D5A97);
@@ -133,7 +141,12 @@ input[type="submit"] {
 }
 
 
-input[type="submit"]:active {
-  top:3px;
-  box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #31524d, 0px 5px 3px #999;
+.fbbtn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
